# redteam4Agent-cli

./: .gitignore  AgentRedTeam_PRD.md  Agent_attacks_DB.md  TODO.md  design-decisions-log.md  imple_session_log.md  implementation-plan.md  pyproject.toml  redteam4RAGvsAgent.rtf  system-design.md
agentrt/: __init__.py  sdk.py
agentrt/adapters/: base.py  rest.py  sdk.py
agentrt/attacks/: base.py  registry.py  stubs.py
agentrt/attacks/category_a/: __init__.py
agentrt/cli/: commands.py
agentrt/config/: __init__.py  loader.py  settings.py
agentrt/engine/: conversation.py  mutation.py  orchestrator.py  state.py
agentrt/generators/: __init__.py  base.py  factory.py  llm.py  static.py
agentrt/judge/: __init__.py  base.py  composite.py  keyword.py  llm.py  schema.py
agentrt/mock_server/: __init__.py  server.py
agentrt/providers/: __init__.py  anthropic.py  base.py  factory.py  ollama.py  openai.py
agentrt/report/: __init__.py  builder.py
agentrt/trace/: store.py
tests/: test_campaign_loader.py  test_config.py  test_conversation.py  test_e2e.py  test_judges.py  test_mock_server.py  test_mutation.py  test_orchestrator.py  test_phase0.py  test_plugin_registry.py  test_probe_generator.py  test_providers.py  test_report_generator.py  test_rest_adapter.py  test_sdk_adapter.py  test_trace_store.py
tests/attacks/: test_category_a.py  test_category_b.py  test_category_c.py  test_category_e.py  test_category_f.py
tests/fixtures/: ci_campaign.yaml  mutation_campaign.yaml  quick_campaign.yaml  sample.yaml
tests/test_agent/: agent.py  server.py
(+10 files in other folders)
